# ProgettoListaSpesa

./: Articolo.h  CMakeLists.txt  Display.h  NegativeNumberException.h  Observer.h  ShoppingList.cpp  ShoppingList.h  Subject.h  User.cpp  User.h
test/: CMakeLists.txt  runAllTests.cpp  testShoppingList.cpp  testUser.cpp
